fix(nf): add back neoforge (doesn't work yet, no yacl)